# inference-engine

./: .clang-format  Cargo.toml  build.rs
.cargo-husky/hooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: test.yml
core/: Cargo.toml
core-cpp/: CMakeLists.txt
core-cpp/cmake/: inference_engine_core.cmake
core-cpp/include/: InferenceEngine.hpp
core-cpp/include/inference-engine/: InferenceEngine.hpp  TensorInfo.hpp
core-cpp/include/inference_engine/: InferenceEngine.hpp
core-rs/: Cargo.toml
core-rs/src/: lib.rs
core-sys/: CMakeLists.txt  Cargo.toml  build.rs
core-sys/include/: lib_core.h
core-sys/src/: bindings.rs  lib.cpp  lib.rs
core/src/: lib.rs
ort/: Cargo.toml  build.rs
ort-cpp/: CMakeLists.txt  test.bat  test.sh
ort-cpp/cmake/: catch2.cmake  onnxruntime.cmake
ort-cpp/include/inference-engine/: OrtInferenceEngine.hpp
ort-cpp/include/inference_engine/: OrtInferenceEngine.hpp
ort-cpp/src/: OrtInferenceEngine.cpp  OrtInferenceEngine.test.cpp
ort-cpp/test-model-creator/: __main__.py  pyproject.toml
ort-cpp/test-model-creator/models/: mat_mul.py  mat_mul_dynamic_shape.py
ort-cpp/test-model-generator/: __main__.py  pyproject.toml
ort-cpp/test-model-generator/models/: matmul.py  matmul_dynamic.py
ort-cpp/test-models/: dynamic-shape.onnx  fixed-shape.onnx  mat_mul_dynamic_shape.onnx  matmul.onnx
ort-rs/: Cargo.toml  build.rs
ort-rs/src/: lib.rs
ort-sys/: .gitignore  CMakeLists.txt  Cargo.toml  build.bat  build.rs  build.sh  test.bat  test.sh
ort-sys/include/: Array.hpp  Error.hpp  OrtInferenceEngine.hpp  Result.hpp  lib.h  lib.hpp
ort-sys/src/: Array.cpp  Error.cpp  OrtInferenceEngine.cpp  OrtInferenceEngine.test.cpp  Result.cpp  bindings.rs  lib.cpp  lib.rs  lib.test.cpp
ort-sys/tests/: run_cpp_tests.rs
ort/src/: lib.rs
src/: lib.rs
tflite/: Cargo.toml  build.rs
tflite-cpp/: CMakeLists.txt  test.bat  test.sh
tflite-cpp/cmake/: inference_engine_core.cmake  tensorflowlite.cmake
tflite-cpp/include/inference-engine/: TfliteInferenceEngine.hpp
tflite-cpp/include/inference_engine/: TfLiteInferenceEngine.hpp  TfliteInferenceEngine.hpp
tflite-cpp/src/: TfLiteInferenceEngine.cpp  TfLiteInferenceEngine.test.cpp  TfliteInferenceEngine.cpp  TfliteInferenceEngine.test.cpp
tflite-cpp/test-model-creator/: README.md  __main__.py  pyproject.toml
tflite-cpp/test-model-creator/models/: matmul.py  matmul_dynamic.py
tflite-cpp/test-model-generator/: README.md  __main__.py  pyproject.toml
tflite-cpp/test-models/: matmul.tflite  matmul_dynamic.tflite
tflite-rs/: Cargo.toml  build.rs
tflite-rs/src/: lib.rs
tflite-sys/: .gitignore  CMakeLists.txt  Cargo.toml  build.bat  build.rs  build.sh  test.bat  test.sh
tflite-sys/include/: lib.h  lib.hpp
tflite-sys/src/: bindings.rs  lib.cpp  lib.rs  lib.test.cpp
tflite/src/: lib.rs
