[workspace]
members = ["core", "core-sys", "ort", "ort-sys", "tflite", "tflite-sys"]

[workspace.package]
version = "0.0.0"
publish = false
edition = "2021"

[package]
name = "inference-engine"
version.workspace = true
publish.workspace = true
edition.workspace = true
links = "inference_engine"

[features]
ort = ["inference-engine-ort"]
tflite = ["inference-engine-tflite"]

[dependencies]
inference-engine-core = { path = "core" }
inference-engine-ort = { path = "ort", optional = true }
inference-engine-tflite = { path = "tflite", optional = true }

[dev-dependencies]
assert_matches = "1.5"
inference-engine-ort = { path = "ort" }
inference-engine-tflite = { path = "tflite" }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
