[package]
name = "inference-engine-ort-sys"
version.workspace = true
publish.workspace = true
edition.workspace = true
links = "inference-engine-ort-sys"

[dependencies]
inference-engine-core = { path = "../core" }

[dev-dependencies]
execute-command = "0.3"

[build-dependencies]
bindgen = "0.65"
const_format = "0.2"
execute-command = "0.3"
