[package]
name = "inference-engine-ort-sys"
version.workspace = true
publish.workspace = true
edition.workspace = true
links = "inference-engine-ort-sys"

[features]
generate-bindings = ["bindgen"]

[dependencies]
inference-engine-core-sys = { path = "../core-sys" }

[dev-dependencies]
execute-command = "0.3"

[build-dependencies]
bindgen = { version = "0.66", optional = true }
const_format = "0.2"
execute-command = "0.3"
