[package]
name = "inference-engine-ort"
version.workspace = true
publish.workspace = true
edition.workspace = true
links = "inference-engine-ort"

[dependencies]
assert_matches = "1.5"
inference-engine-core = { path = "../core" }
inference-engine-core-sys = { path = "../core-sys" }
inference-engine-ort-sys = { path = "../ort-sys" }
