[package]
name = "inference-engine-tflite"
version.workspace = true
publish.workspace = true
edition.workspace = true
links = "inference_engine_tflite"

[dependencies]
inference-engine-core = { path = "../core-rs" }
inference-engine-core-sys = { path = "../core-sys" }
inference-engine-tflite-sys = { path = "../tflite-sys" }

[dev-dependencies]
assert_matches = "1.5"
