[package]
name = "inference-engine-tflite-sys"
version.workspace = true
publish.workspace = true
edition.workspace = true
links = "inference-engine-tflite-sys"

[features]
generate-bindings = ["bindgen"]

[dependencies]
inference-engine-core-sys = { path = "../core-sys" }

[dev-dependencies]
execute-command = "0.3"

[build-dependencies]
bindgen = { version = "0.68", optional = true }
const_format = "0.2"
execute-command = "0.3"
